<resources>
    <string name="app_name">Finance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_home">Home</string>
    <string name="title_receita">Receitas</string>
    <string name="title_despesa">Despesas</string>
    <string name="title_logout">Sair</string>
    <string name="title_bank">Bancos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="Entrar">Entrar</string>
    <string name="title_activity_maps">Map</string>
</resources>
