<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">





    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_receita"
            android:icon="@drawable/ic_receita_24dp"
            android:title="@string/title_receita"/>

    <item
            android:id="@+id/navigation_despesa"
            android:icon="@drawable/ic_despesas_24dp"
            android:title="@string/title_despesa"/>


    <item
            android:id="@+id/navigation_bank"
            android:icon="@drawable/ic_local_atm_24dp"
            android:title="@string/title_bank"/>



    <item
            android:id="@+id/navigation_logout"
            android:icon="@drawable/ic_power_off_24dp"
            android:title="@string/title_logout"/>

</menu>
